Añade transparencia a pelicula, soluciona orden peliculas

--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -14,5 +14,7 @@
                 </mat-chip>
             </mat-chip-list>
         </div>
+        <div class="degradado">
+        </div>
     </div>
 </div>
