--- a/src/app/components/pelicula/pelicula.component.css
+++ b/src/app/components/pelicula/pelicula.component.css
@@ -8,13 +8,25 @@
     flex-direction: row;
 }
 
+.degradado {
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    background-color:white;
+    z-index: 1;
+}
+
 .caratula {
     margin-top:20px;
-    margin-left: 40px;
+    margin-left: 15vw;
+    z-index: 2;
 }
 
 .info {
     margin-left: 10px;
+    margin-right: 15vw;
+    z-index: 2;
 }
 
 .imgCaratula {
